RESOLVED FIXED 252752
yasm: fix remaining deprecation warnings for sprintf()
https://bugs.webkit.org/show_bug.cgi?id=252752
Summary yasm: fix remaining deprecation warnings for sprintf()
David Kilzer (:ddkilzer)
Reported 2023-02-22 08:52:18 PST
yasm: v2: fix remaining deprecation warnings for sprintf(). There were more deprecation warnings for sprintf() that weren't reported the first time.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-22 08:52:43 PST
David Kilzer (:ddkilzer)
Comment 2 2023-02-22 08:58:50 PST
EWS
Comment 3 2023-02-22 13:12:56 PST
Committed 260697@main (32bda1530bca): <https://commits.webkit.org/260697@main> Reviewed commits have been landed. Closing PR #10518 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.