yasm: fix remaining deprecation warnings for sprintf() https://bugs.webkit.org/show_bug.cgi?id=252752 <rdar://105781735>

Reviewed by Alex Christensen.

Fix the remaining uses of sprintf() in compiled sources.  There
are a few more uses in test files that are not compiled that are
not fixed.

Note that assert() statements are added where snprintf() is used
in a loop and the pointer and line length are repeatedly
adjusted in order to catch bugs at build time.

* Source/ThirdParty/libwebrtc/Configurations/yasm.xcconfig:
- Define HAVE_VSNPRINTF=1 when building to use vsnprintf()
  instead of vsprintf().

* Source/ThirdParty/libwebrtc/Source/third_party/yasm/gas-token.c:
(gas_parser_lex):
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/libyasm/errwarn.c:
(yasm_error_set_va):
(yasm_error_set_xref_va):
(yasm_warn_set_va):
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/libyasm/intnum.c:
(yasm_intnum_get_str):
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/modules/dbgfmts/codeview/cv-symline.c:
(cv_generate_line_bc):
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/modules/objfmts/macho/macho-objfmt.c:
(macho_objfmt_section_switch):
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/modules/parsers/gas/gas-token.re:
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/modules/preprocs/gas/gas-preproc.c:
(substitute_values):
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/modules/preprocs/nasm/nasm-pp.c:
(check_tasm_directive):
(prepreproc):
(detoken):
(do_directive):
(expand_mmac_params):
* Source/ThirdParty/libwebrtc/Source/third_party/yasm/modules/preprocs/nasm/nasm-preproc.c:
(nasm_preproc_get_line):

Canonical link: https://commits.webkit.org/260697@main